# wet-finger

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  spec.yaml
.github/: general.yml  mold.yml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230213170550_create_subscriptions_table.sql  20230226093013_create_subscription_tokens_table.sql
src/: configuration.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
tests/: health_check.rs
zero2prod/: Cargo.toml
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs
